# LAB3

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h
